# dostonksgobrr.com

./: .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
dostonksgobrr/: __about__.py  __main__.py  application.py  calendar.py
dostonksgobrr/static/: robots.txt  style.css
dostonksgobrr/templates/: index.html.j2
tests/: test_metadata.py
