[tool.poetry]
name = "dostonksgobrr"
version = "0.0.0"
license = "MIT"
authors = ["Ethan Paul <24588726+enpaul@users.noreply.github.com>"]
description = "A simple web app to let you know if the market is open"
repository = "https://github.com/enpaul/dostonksgobrr.com/"
packages = [
  {include = "dostonksgobrr"},
  {include = "tests/*.py", format = "sdist"}
]
include = [
  "dostonksgobrr/py.typed",
  "dostonksgobrr/static/",
  "dostonksgobrr/templates/"
]
readme = "README.md"

[tool.poetry.extras]
deploy = ["gunicorn", "Flask-Minify"]

[tool.poetry.dependencies]
python = "^3.7.0"
Flask = "^1.1.2"
gunicorn = {version = "^20.0.4", optional = true}
Flask-Minify = {version = "^0.29", optional = true}

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = { version = "^20.8b1", allow-prereleases = true }
blacken-docs = "^1.8.0"
ipython = "^7.18.1"
mypy = "^0.782"
pre-commit = ">=2.7.1,<2.10.0"
pre-commit-hooks = "^3.3.0"
pylint = "^2.4.4"
pytest = "^6.0.2"
pytest-cov = "^2.10.1"
reorder-python-imports = "^2.3.5"
safety = "^1.9.0"
toml = "^0.10.1"
tox = "^3.20.0"
tox-poetry-installer = {version = "^0.6.2", extras = ["poetry"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
